<resources>
    <string name="app_name">FinalProject</string>
    <string name="title_activity_maps">Map</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="map">Map</string>
    <string name="companies">Companies</string>
    <string name="strongholds">Strongholds</string>
    <string name="title_activity_add_stronghold">AddStrongholdActivity</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="title_activity_add_contact">AddContactActivity</string>
    <string name="parent">Parent</string>
    <string name="child">Child</string>
    <string name="sibling">Sibling</string>
    <string name="extFam">Extended Family</string>
    <string name="acquaintance">Acquaintance</string>
    <string name="friend">Friend</string>
    <string name="closeFriend">Close Friend</string>
    <string name="sigOth">Significant Other</string>

    <string-array name="relTypes">
        <item>Parent</item>
        <item>Child</item>
        <item>Sibling</item>
        <item>Extended Family</item>
        <item>Acquaintance</item>
        <item>Friend</item>
        <item>Close Friend</item>
        <item>Significant Other</item>
    </string-array>
    <string name="title_activity_loc_picker">Map</string>
    <string name="sphere_of_influence">Sphere of Influence</string>
    <string name="contacts">Contacts</string>
    <string name="filter_by_relationship">Filter by Relationship</string>
    <string name="sort_by_last_name">Sort By Last Name</string>
    <string name="sort_by_first_name">Sort By First Name</string>
    <string name="search">Search</string>
    <string name="searching">\"Searching: \"</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="hybrid">Hybrid</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="married">Married?</string>
    <string name="lattitude">Lattitude</string>
    <string name="longitude">Longitude</string>
    <string name="must_select_gender">Must select a gender.</string>
    <string name="femMarried">Mrs.</string>
    <string name="femUnmarried">Ms.</string>
    <string name="maleHonorific">Mr.</string>
    <string name="sphereDisabled">Sphere of influence disabled.</string>
    <string name="must_select_loc">Must select a location.</string>
    <string name="validPhone">A valid phone number must have at least 10 digits.</string>
    <string name="mustEnterPhone">Must enter phone number</string>
    <string name="mustEnterLast">Must enter last name</string>
    <string name="mustEnterFirst">Must enter first name</string>
    <string name="placeholderHon">MR</string>
    <string name="placeholderFName">FIRSTNAME</string>
    <string name="placeholderLName">LASTNAME</string>
    <string name="placeholderBDay">BDAY</string>
    <string name="placeholderRel">REL</string>
    <string name="born_on">born on</string>
    <string name="your">Your</string>
    <string name="lives_at">Lives at</string>
</resources>