<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    android:orientation="vertical"
    android:padding="@dimen/box_inset_layout_padding"
    tools:context=".AddContactActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@android:string/emptyPhoneNumber"
            android:inputType="phone" />

        <RadioGroup
            android:id="@+id/relClassGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/maleRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/man" />

            <RadioButton
                android:id="@+id/femRadio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/woman" />
        </RadioGroup>

        <CheckBox
            android:id="@+id/marriedCheck"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/married" />

        <Spinner
            android:id="@+id/relTypeSpinner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:entries="@array/relTypes" />

        <DatePicker
            android:id="@+id/bdayPicker"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/DARK1"
            android:calendarTextColor="@color/AURORA0" />


        <SeekBar
            android:id="@+id/yearSeek"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="21"
            android:padding="@dimen/half"
            android:progress="11" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/locPicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/half"
                android:layout_weight="1"
                android:background="@color/FROST0"
                android:src="@android:drawable/ic_dialog_map" />

            <EditText
                android:id="@+id/latField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/lattitude"
                android:inputType="numberSigned" />

            <EditText
                android:id="@+id/lngField"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/longitude"
                android:inputType="numberSigned" />
        </LinearLayout>

        <ImageButton
            android:id="@+id/addBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dword"
            android:background="@color/FROST0"
            android:src="?android:attr/textCheckMarkInverse" />

    </LinearLayout>
</ScrollView>