<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/quart">

    <TextView
        android:id="@+id/honorific"
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderHon"
        app:layout_constraintEnd_toStartOf="@+id/firstName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/firstName"
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderFName"
        app:layout_constraintBaseline_toBaselineOf="@+id/honorific"
        app:layout_constraintEnd_toStartOf="@+id/lastName"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/honorific" />

    <TextView
        android:id="@+id/lastName"
        style="@android:style/TextAppearance.Material.Headline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholderLName"
        app:layout_constraintBaseline_toBaselineOf="@+id/firstName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/firstName" />

    <TextView
        android:id="@+id/phoneNumber"
        style="@android:style/TextAppearance.Material.Subhead"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/firstName" />

    <TextView
        android:id="@+id/rel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView8"
        app:layout_constraintEnd_toStartOf="@+id/textView9"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView8" />

    <TextView
        android:id="@+id/bday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your"
        app:layout_constraintEnd_toStartOf="@+id/rel"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/born_on"
        app:layout_constraintBaseline_toBaselineOf="@+id/rel"
        app:layout_constraintEnd_toStartOf="@+id/bday"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/rel" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lives_at"
        app:layout_constraintEnd_toStartOf="@+id/lat"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView10"
        app:layout_constraintEnd_toStartOf="@+id/lng"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/textView10" />

    <TextView
        android:id="@+id/lng"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBaseline_toBaselineOf="@+id/lat"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lat" />
</androidx.constraintlayout.widget.ConstraintLayout>